# ansible-container-registry

./: .gitignore  .travis.yml  galaxy.yml  pyproject.toml  requirements-dev.txt  requirements-monorepo.yml  requirements-standalone.yml  requirements.txt  requirements.yml  tox.ini
.circleci/: config.yml
.github/workflows/: molecule.yml
meta/: main.yml
molecule/: requirements.yml
molecule/default/: converge.yml  molecule.yml
molecule/default/tests/: test_default.py
molecule/kvm/: converge.yml  molecule.yml  prepare.yml
molecule/parallels/: converge.yml  molecule.yml
tasks/: docker-registry.yml  main.yml  nginx-proxy.yml  prerequisites.yml
templates/: config.yml.j2
