[tool.poetry]
name = "tcharl.ansible_container_registry"
version = "0.1.0"
description = "Deploys a container registry"
authors = ["Charlie Mordant <cmordant1@gmail.com>"]
license = "Apache2"
readme = "README.md"
include = ["defaults", "files", "handlers", "meta", "tasks", "templates", "vars"]
packages = [
    {include = "meta/**/*.py"}
]

[tool.poetry.dependencies]
python = ">3.10"
ansible = "^9.1.0"
jmespath = "^1.0.1"
netaddr = "^0.8.0"
requests = "*"
docker = "*"

[tool.poetry.group.dev.dependencies]
flake8 = "*"
yamllint = "*"
pytest-testinfra = "*"
python-vagrant = "*"
molecule-plugins = {version = "*", extras = ["vagrant"]}
ansible-lint = {version = "^v6.22.1", markers = "platform_system != 'Windows'" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
